--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.20.0",
+    "@google/genai": "^1.0.1",
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.9.0",
     "mongoose": "^8.15.0",
     "next": "15.3.2",
